Style all text, update spacing, fix color contrast

--- a/style.css
+++ b/style.css
@@ -1,10 +1,53 @@
+body {
+  background-color: hsl(197, 28%, 95%);
+  color: hsl(0deg 1% 47%);
+  font-family: "Roboto", sans-serif;
+
+  margin: 0;
+}
+h1 strong,
+h2,
+h3,
+h4 {
+  color: hsl(0deg 0% 32%);
+}
+
+h1 {
+  font-weight: 300;
+  height: 32px;
+  margin: 0;
+}
+h2 {
+  font-size: 36px;
+  max-width: 80%;
+  margin: 0;
+}
+h3 {
+  font-size: 32px;
+  padding: 32px 0 0 0;
+  margin: 0;
+}
+h4 {
+  font-size: 24px;
+  font-weight: 500;
+  margin: 0;
+  letter-spacing: 0.5px;
+}
+p {
+  font-size: 18px;
+  line-height: 1.5;
+}
+p.quotation-source {
+  color: hsl(0deg 0% 32%);
+}
+
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: fixed;
   top: 0;
-  background-color: white;
+  background-color: hsl(0, 0%, 100%);
   width: 100%;
 }
 nav.desktop-display {
@@ -14,12 +57,6 @@ nav.desktop-display {
 nav.desktop-display img {
   height: 50px;
   width: 50px;
-}
-
-h1 {
-  font-weight: 300;
-  height: 32px;
-  margin: 0;
 }
 
 .nav-inset-wrapper-1,
@@ -46,10 +83,11 @@ li {
   margin-right: 16px;
 }
 a {
+  color: hsl(0deg 0% 32%);
   text-decoration: none;
 }
 a:visited {
-  color: blue;
+  color: hsl(0deg 0% 32%);
 }
 a:hover {
   text-decoration: underline;
@@ -60,6 +98,7 @@ a:active {
 
 img,
 video {
+  height: auto;
   max-width: 100%;
 }
 .mobile-display {
@@ -69,9 +108,41 @@ video {
 main {
   margin-top: 64px;
 }
-
+.section-banner {
+  background-color: hsl(0, 0%, 83%);
+}
+.section-banner p {
+  color: hsl(0deg 0% 32%);
+  font-size: 25px;
+  font-weight: 500;
+  max-width: 80%;
+  margin: 24px 0;
+}
+.section-courses {
+  background-color: hsl(0, 5%, 91%);
+  padding: 0 72px 32px 72px;
+}
+.section-courses .course-card {
+  background-color: hsl(0, 0%, 100%);
+}
+.section-courses .course-card-text {
+  margin: 16px 16px 24px 16px;
+}
+.section-courses p {
+  margin-top: 8px;
+  margin-bottom: 0;
+}
+.section-thesis h4 {
+  margin-top: 24px;
+}
+.section-thesis p {
+  margin-top: 8px;
+  margin-bottom: 0;
+}
 .section-template-primary {
   display: flex;
+}
+.section-banner .section-template-primary {
   align-items: center;
 }
 .section-template-primary .subsection-one {
@@ -79,28 +150,71 @@ main {
   width: 60%;
 }
 .section-template-primary .subsection-two {
+  margin-top: 16px;
   width: 40%;
+}
+
+button {
+  background-color: hsl(0deg 1% 27%);
+  border: none;
+  padding: 8px 0;
+  width: 80%;
+}
+button a {
+  color: hsl(0, 0%, 100%);
+  font-size: 18px;
+}
+button a:visited {
+  color: hsl(0, 0%, 100%);
+}
+button a:hover {
+  text-decoration: none;
 }
 .sidebar-item {
   display: flex;
+  align-items: center;
+}
+.sidebar-item:hover {
+  background-color: hsl(0deg 0% 83%);
+}
+.sidebar-item a {
+  color: hsl(200deg 99% 35%);
+}
+.sidebar-item a:visited {
+  color: hsl(200deg 99% 35%);
+}
+.sidebar-item a:hover {
+  color: hsl(201deg 97% 29%);
+  text-decoration: underline;
+}
+.sidebar-item a:active {
+  color: hsl(201deg 97% 29%);
+  font-weight: bold;
 }
 .sidebar-item-image {
   height: auto;
-  margin: 14px;
+  margin: 16px;
   width: 35%;
 }
 .sidebar-item-text {
+  margin-right: 24px;
   width: 65%;
 }
 .section-template-secondary {
   display: grid;
   grid-template: repeat(2, 1fr) / repeat(3, 1fr);
   gap: 32px 32px;
+  margin-top: 32px;
 }
 footer {
+  border-top: 1px solid hsl(0, 0%, 83%);
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  padding: 16px 24px 32px 24px;
+}
+footer p {
+  margin: 0;
 }
 
 /* Utility classes*/
